--- a/style.css
+++ b/style.css
@@ -1,60 +1,147 @@
+:root {
+  --primary-bg-color: #f9f9f9;
+  --second-bg-color: #93caed;
+  --text-black-color: #333333;
+  --text-white-color: #fbfbfb;
+  --third-bg-color: #f5f5f5;
+  --hover-color: #7ab5d9;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f9f9f9;
+  background-color: var(--primary-bg-color);
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
-.main {
-  width: 50%;
+
+header {
+  background-color: var(--hover-color);
+  width: 100%;
+  height: 10%;
+  top: 0;
+}
+
+h1 {
+  color: var(--text-black-color);
+  font-weight: 600;
+  text-align: center;
+}
+
+main {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  height: 90%;
+}
+
+.sidebar {
+  width: 20%;
+  height: 100%;
+  background-color: var(--second-bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 1rem 0 0 1rem;
+  gap: 1rem;
+}
+
+summary {
+  color: var(--text-white-color);
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.details-list {
+  background: grey;
+  margin-right: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  align-items: center;
+  margin-top: 0.5rem;
+}
+
+details {
+  border-top: 1px solid white;
+  border-bottom: 1px solid black;
+}
+
+details[open] {
+  height: 40%;
+}
+
+.sidebar article {
+  max-height: 270px;
+  overflow-x: hidden;
+  border-radius: 16px;
+}
+
+.sidebar article h3 {
+  color: var(--text-black-color);
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.75rem 1rem;
+  border-radius: 16px;
+  background-color: var(--third-bg-color);
+  text-align: center;
+  width: 40%;
+}
+
+.main-content {
+  width: 80%;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  padding: 10px;
+  padding: 1.5rem 1rem 1rem 1rem;
+  gap: 1rem;
 }
 
-.main h1 {
-  font-size: 32px;
-  font-weight: 600;
-  color: #333333;
-}
-
-.main .input-box {
-  width: 100%;
+.main-content .search-box {
+  width: 50%;
   height: 50px;
-  margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.main input {
+.search-box input {
   width: 80%;
   border-radius: 12px;
   color: black;
   padding-left: 2%;
   height: 100%;
   font-size: 1.25rem;
-  border: 1.5px solid black;
-  background-color: white;
+  border: 1.5px solid var(--text-black-color);
+  background-color: var(--third-bg-color);
 }
 
-.main button {
+.search-box button {
   border-radius: 12px;
   height: 100%;
   width: 12%;
-  background-color: #93caed;
+  background-color: var(--second-bg-color);
   font-size: 1rem;
-  color: white;
+  color: var(--text-white-color);
   border-color: transparent;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
 
-.main button:hover {
-  background-color: #7ab5d9;
+.search-box button:hover {
+  background-color: var(--hover-color);
   transform: scale(1.05);
 }
 
@@ -69,10 +156,10 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 160px;
-  background-color: #f5f5f5;
+  background-color: var(--third-bg-color);
   border-radius: 12px;
   padding: 8px 0;
-  border: 1.5px solid #333333;
+  border: 1.5px solid var(--text-black-color);
   margin-bottom: 30px;
   position: relative;
 }
@@ -98,76 +185,10 @@ body {
 }
 
 .card .favorite {
-  background-color: #93caed;
+  background-color: var(--second-bg-color);
   position: absolute;
   right: 0.5%;
   top: 2%;
   border-radius: 12px;
   padding: 8px;
-}
-
-.sidebar-options {
-  position: absolute;
-  top: 1%;
-  right: 2%;
-  width: 6%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.option {
-  background-color: #93caed;
-  border-radius: 12px;
-  padding: 8px;
-}
-
-.sidebar {
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 20%;
-  z-index: 10;
-  height: 100%;
-  display: none;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: #93caed;
-  border-radius: 12px 0px 0px 12px;
-  padding-top: 2rem;
-}
-
-.sidebar .exit-icon {
-  border-radius: 12px;
-  padding: 8px;
-  position: absolute;
-  top: 1%;
-  right: 1%;
-}
-
-.sidebar h2 {
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.sidebar h3 {
-  color: #333333;
-  font-size: 1rem;
-  font-weight: 400;
-  padding: 0.75rem 1.25rem;
-  border-radius: 12px;
-  background-color: #ffffff;
-  text-align: center;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 5;
-  display: none;
 }
