--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 :root {
-  --primary-bg-color: #f9f9f9;
-  --second-bg-color: #93caed;
-  --text-black-color: #333333;
-  --text-white-color: #fbfbfb;
-  --third-bg-color: #f5f5f5;
-  --hover-color: #7ab5d9;
+  --primary-dark-bg-color: #000000;
+  --primary-light-bg-color: #ffffff;
+  --second-dark-bg-color: #050505;
+  --second-light-bg-color: #f9fafb;
+  --third-dark-bg-color: #111827;
+  --third-light-bg-color: #f3f4f6;
+  --text-label-color: #9ca3af;
+  --text-nav-color: #f3faf6;
+  --text-main-color: #ffffff;
+  --primary-border-color: #d1d5db;
+  --second-border-color: #e5e7eb;
+  --third-border-color: #1f2937;
 }
 
 *,
@@ -19,22 +25,21 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--primary-bg-color);
   height: 100vh;
   padding: 0;
   margin: 0;
 }
 
 header {
-  background-color: var(--hover-color);
+  background-color: var(--primary-dark-bg-color);
   width: 100%;
   height: 10%;
   top: 0;
 }
 
 h1 {
-  color: var(--text-black-color);
-  font-weight: 600;
+  color: var(--text-main-color);
+  font-weight: 700;
   text-align: center;
 }
 
@@ -46,67 +51,62 @@ main {
 }
 
 .sidebar {
-  width: 20%;
+  width: 15%;
   height: 100%;
-  background-color: var(--second-bg-color);
+  background-color: var(--second-dark-bg-color);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 1rem 0 0 1rem;
-  gap: 1rem;
 }
 
 summary {
-  color: var(--text-white-color);
-  font-size: 1.5rem;
-  font-weight: 600;
+  color: var(--text-nav-color);
+  font-size: 1.25rem;
+  font-weight: semi-bold;
+  background-color: var(--third-dark-bg-color);
+  padding: 1rem 0 1rem 1rem;
+  border-bottom: 1px solid var(--third-border-color);
+  border-top: 1px solid var(--third-border-color);
 }
 
 .details-list {
-  background: grey;
-  margin-right: 0.5rem;
+  background: var(--third-dark-bg-color);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 0.5rem;
   align-items: center;
-  margin-top: 0.5rem;
-}
-
-details {
-  border-top: 1px solid white;
-  border-bottom: 1px solid black;
 }
 
 details[open] {
-  height: 40%;
+  height: auto;
 }
 
 .sidebar article {
-  max-height: 270px;
+  max-height: 240px;
   overflow-x: hidden;
-  border-radius: 16px;
+  gap: 0.5rem;
 }
 
 .sidebar article h3 {
-  color: var(--text-black-color);
+  color: var(--text-nav-color);
   font-size: 1rem;
   font-weight: 400;
-  padding: 0.75rem 1rem;
-  border-radius: 16px;
-  background-color: var(--third-bg-color);
   text-align: center;
   width: 40%;
+  margin: 0;
+  padding: 0.5rem;
 }
 
 .main-content {
-  width: 80%;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   padding: 1.5rem 1rem 1rem 1rem;
   gap: 1rem;
+  background-color: var(--second-light-bg-color);
 }
 
 .main-content .search-box {
@@ -119,76 +119,191 @@ details[open] {
 
 .search-box input {
   width: 80%;
-  border-radius: 12px;
-  color: black;
+  border-radius: 8px;
+  color: var(--second-dark-bg-color);
   padding-left: 2%;
   height: 100%;
   font-size: 1.25rem;
-  border: 1.5px solid var(--text-black-color);
-  background-color: var(--third-bg-color);
+  border: 1px solid var(--primary-border-color);
+  background-color: var(--primary-light-bg-color);
 }
 
 .search-box button {
-  border-radius: 12px;
+  border-radius: 8px;
   height: 100%;
   width: 12%;
-  background-color: var(--second-bg-color);
+  background-color: var(--primary-dark-bg-color);
   font-size: 1rem;
-  color: var(--text-white-color);
+  color: var(--primary-light-bg-color);
   border-color: transparent;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
 
 .search-box button:hover {
-  background-color: var(--hover-color);
+  background-color: var(--second-dark-bg-color);
   transform: scale(1.05);
 }
 
-#card-box {
+.main-content .cards {
+  display: flex;
+  height: 85%;
   width: 100%;
+  justify-content: space-around;
+  flex-direction: row;
+  padding-top: 2%;
 }
 
 .card {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  height: 160px;
-  background-color: var(--third-bg-color);
-  border-radius: 12px;
-  padding: 8px 0;
-  border: 1.5px solid var(--text-black-color);
-  margin-bottom: 30px;
+  display: grid;
+  width: 40%;
+  height: 90%;
   position: relative;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  background-color: var(--second-dark-bg-color);
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
 }
 
-.card .card-text {
+.card figure {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  margin: 0;
+  padding: 1rem;
+}
+
+.card .flag {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 16px;
+  border: 1px solid rgba(128, 128, 128, 0.4);
+}
+
+.card .country-main-info {
+  grid-column-start: 4;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 4;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 1%;
-  width: 30%;
+  height: 100%;
+  justify-content: flex-end;
+  gap: 1rem;
+  padding-bottom: 1rem;
 }
 
-.card .card-text h2 {
-  font-weight: 600;
-  font-size: 1.25rem;
-  margin: 8px 0;
+.card .country-main-info h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--primary-light-bg-color);
+  margin: 0;
 }
 
-.card .card-text h3 {
+.card .country-main-info h4 {
+  color: var(--text-label-color);
   font-size: 1rem;
   font-weight: 400;
-  margin: 8px 0;
+  margin: 0;
+}
+
+.card .weather-info {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 4;
+  grid-row-end: 6;
+  background-color: var(--third-dark-bg-color);
+  height: 80%;
+  align-self: center;
+  margin: 0 1rem;
+  border-radius: 8px;
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.card .weather-info h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--primary-light-bg-color);
+  margin: 0;
+}
+
+.card .weather-info h4 {
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: var(--text-label-color);
+  margin: 0;
+}
+
+.card .infoL {
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 6;
+  grid-row-end: -1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 1rem 0 0 1rem;
+  gap: 1rem;
+}
+
+.card .infoR {
+  grid-column-start: 6;
+  grid-column-end: -1;
+  grid-row-start: 6;
+  grid-row-end: -1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 1rem 0 0 1rem;
+  gap: 1rem;
+}
+
+.card .extra-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.card .extra-info h2 {
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: var(--primary-light-bg-color);
+  margin: 0;
+}
+
+.card .extra-info h4 {
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: var(--text-label-color);
+  margin: 0;
 }
 
 .card .favorite {
-  background-color: var(--second-bg-color);
+  background-color: var(--primary-dark-bg-color);
   position: absolute;
   right: 0.5%;
   top: 2%;
   border-radius: 12px;
   padding: 8px;
+}
+
+.main-content .arrows {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+}
+
+.main-content .arrow {
+  padding: 0.25rem;
+  border-radius: 24px;
+  border: 1px solid var(--primary-border-color);
 }
