--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 .card figure {
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 5;
   grid-row-start: 1;
   grid-row-end: 4;
   margin: 0;
@@ -27,8 +27,8 @@
   border: 1px solid rgba(128, 128, 128, 0.4);
 }
 .card .country-main-info {
-  grid-column-start: 4;
-  grid-column-end: 7;
+  grid-column-start: 5;
+  grid-column-end: 8;
   grid-row-start: 1;
   grid-row-end: 4;
   display: flex;
@@ -48,6 +48,22 @@
   font-size: 1rem;
   font-weight: 400;
   margin: 0;
+}
+@media (width >= 750px) and (width <= 1250px) {
+  .card figure {
+    grid-column-start: 1;
+    grid-column-end: 6;
+  }
+  .card .country-main-info {
+    grid-column-start: 6;
+    grid-column-end: 9;
+  }
+}
+@media (width < 750px) {
+  .card {
+    width: 95%;
+    height: 100%;
+  }
 }
 .card .weather-info {
   grid-column-start: 1;
@@ -185,11 +201,28 @@ header {
   width: 100%;
   height: 10%;
   top: 0;
+  position: relative;
 }
 header h1 {
   color: #ffffff;
   font-weight: 700;
-  text-align: center;
+  text-align: left;
+  padding-left: 3rem;
+}
+header .menu-icon {
+  position: absolute;
+  right: 2%;
+  align-self: anchor-center;
+}
+@media (width >= 750px) {
+  header .menu-icon {
+    display: none;
+  }
+}
+@media (width < 750px) {
+  header h1 {
+    text-align: center;
+  }
 }
 
 main {
@@ -197,6 +230,21 @@ main {
   display: flex;
   flex-direction: row;
   height: 90%;
+}
+@media (width < 750px) {
+  main {
+    flex-direction: column;
+  }
+  main .main-content.disabled {
+    display: none;
+  }
+  main .sidebar {
+    display: none;
+    width: 100%;
+  }
+  main .sidebar.active {
+    display: flex;
+  }
 }
 
 .sidebar {
@@ -235,6 +283,17 @@ main {
   margin: 0;
   padding: 0.5rem 0;
 }
+.sidebar .details-list .history-button {
+  color: #f3f4f6;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: left;
+  width: 40%;
+  margin: 0;
+  padding: 0.5rem 0;
+  border: 0;
+  background-color: transparent;
+}
 
 details[open] {
   height: auto;
@@ -259,6 +318,11 @@ details[open] {
   justify-content: space-between;
   align-items: center;
 }
+@media (width < 750px) {
+  .main-content .search-box {
+    width: 100%;
+  }
+}
 .main-content .search-box input {
   width: 80%;
   border-radius: 8px;
@@ -273,6 +337,7 @@ details[open] {
   border-radius: 8px;
   height: 100%;
   width: 12%;
+  min-width: 70px;
   background-color: #000000;
   font-size: 1rem;
   color: #ffffff;
@@ -284,6 +349,12 @@ details[open] {
   background-color: #050505;
   transform: scale(1.05);
 }
+@media (width >= 750px) and (width <= 1250px) {
+  .main-content .search-box {
+    align-self: flex-start;
+    gap: 5%;
+  }
+}
 
 .main-content .cards {
   display: flex;
@@ -293,6 +364,13 @@ details[open] {
   align-items: center;
   flex-direction: row;
   padding-top: 2%;
+  overflow-x: hidden;
+}
+@media (width < 750px) {
+  .main-content .cards {
+    flex-direction: column;
+    gap: 2%;
+  }
 }
 
 .cards .no-country-text {
